[project]
name = "hello-tjkpolisher"
version = "0.2.0"
description = "The Python program I'm distributing for the first time ever"
authors = [
    {name = "tjkpolisher", email = "jktak5609@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
