[project]
name = "hello-tjkpolisher"
version = "0.4.1"
description = "The Python program I'm distributing for the first time ever"
authors = [
    {name = "tjkpolisher", email = "jktak5609@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]

[project.urls]
"Homepage" = "https://github.com/tjkpolisher/hello-tjkpolisher"
"Bug Tracker" = "https://github.com/tjkpolisher/hello-tjkpolisher/issues"